# pathfinder-plugin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: system-architect.md
.claude/skills/pathfinder-check/: SKILL.md
.claude/skills/pathfinder-define/: SKILL.md
.claude/skills/pathfinder-discover/: SKILL.md
.claude/skills/pathfinder-implement/: SKILL.md
.claude/skills/pathfinder-navigate/: SKILL.md
docs/: pathfinder-v2-proposal.md  usage-guide.md
docs/superpowers/plans/: 2026-04-08-integration-test-fixes.md  2026-04-08-model-hardening.md  2026-04-08-pathfinder-cli.md
docs/superpowers/specs/: 2026-04-07-pathfinder-design.md  2026-04-08-model-hardening-design.md  2026-04-14-pathfinder-structurizr-design.md
pathfinder/: __init__.py  types.py
pathfinder/agents/: init-agent.md  system-architect.md
pathfinder/cli/: add_cmd.py  contract_cmd.py  depend_cmd.py  deps_cmd.py  docker_cmd.py  drift_cmd.py  export_cmd.py  flows_cmd.py  help_cmd.py  info_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  main.py  map_cmd.py  move_cmd.py  remove_cmd.py  search_cmd.py  set_cmd.py  show_cmd.py  standards_cmd.py  utils.py  validate_cmd.py
pathfinder/core/: graph.py  index_builder.py  storage.py
pathfinder/skills/pathfinder-check/: SKILL.md
pathfinder/skills/pathfinder-context/: SKILL.md
skills/pathfinder-define/: SKILL.md
skills/pathfinder-discover/: SKILL.md
skills/pathfinder-navigate/: SKILL.md
tests/cli/: test_add.py  test_contract.py  test_depend.py  test_deps.py  test_docker.py  test_drift.py  test_export.py  test_flows.py  test_help.py  test_info.py  test_init.py  test_install.py  test_list.py  test_map.py  test_move.py  test_remove.py  test_search.py  test_set.py  test_show.py  test_standards.py  test_validate.py
tests/core/: test_graph.py  test_index_builder.py  test_storage.py
(+2 files in other folders)
