[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathfinder"
version = "0.1.0"
description = "Architecture-first component library CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
pathfinder = "pathfinder.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
